Trigger travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: android
+env:
+  global:
+    - ANDROID_API_LEVEL=25
 android:
   components:
     - build-tools-25.0.0
-    - android-25
+    - android-${ANDROID_API_LEVEL}
+    - sys-img-armeabi-v7a-android-${ANDROID_API_LEVEL}
