--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ env:
     - ANDROID_API_LEVEL=25
 android:
   components:
-    - build-tools-25.0.0
+    - platform-tools
+    - tools
+    - build-tools-25.0.2
+    - tools
     - android-${ANDROID_API_LEVEL}
     - sys-img-armeabi-v7a-android-${ANDROID_API_LEVEL}
