Fix command line build lint warnings

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ buildscript {
 }
 
 allprojects {
+    tasks.withType(JavaCompile) {
+        options.compilerArgs << "-Xlint:deprecation"
+    }
     repositories {
         jcenter()
     }
