--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,12 +18,15 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <!-- For web sync retries -->
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <!-- For exporting tracks -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <!-- Needed if app targets API >= 21 -->
     <uses-feature android:name="android.hardware.location.gps" />
     <uses-feature android:name="android.hardware.location.network" />
+
     <!-- Todo: attach camera image to position -->
-    <!--<uses-feature android:name="android.hardware.camera" android:required="false" />-->
+    <!-- <uses-feature android:name="android.hardware.camera" android:required="false" /> -->
 
     <application
         android:allowBackup="true"
@@ -32,24 +35,28 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="net.fabiszewski.ulogger.MainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="net.fabiszewski.ulogger.SettingsActivity" />
+        <activity android:name=".SettingsActivity" />
 
         <service
-            android:name="net.fabiszewski.ulogger.LoggerService"
+            android:name=".LoggerService"
             android:enabled="true"
             android:exported="false" />
         <service
-            android:name="net.fabiszewski.ulogger.WebSyncService"
+            android:name=".WebSyncService"
+            android:exported="false" />
+
+        <service
+            android:name=".GpxExportService"
             android:exported="false" />
 
         <receiver
-            android:name="net.fabiszewski.ulogger.BootCompletedReceiver"
+            android:name=".BootCompletedReceiver"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
