--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,9 @@ script:
 after_success:
   - |
     if [ ! -z "$TRANSIFEX_PASSWORD" ]; then
+      pip install --user virtualenv
+      virtualenv ~/env
+      source ~/env/bin/activate
       pip install --user transifex-client
       echo -e "[https://www.transifex.com]\nhostname = https://www.transifex.com\nusername = api\npassword = ${TRANSIFEX_PASSWORD}\n" > ~/.transifexrc
       tx push -s --no-interactive
