--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,11 +13,11 @@ android {
     compileSdkVersion 28
 
     defaultConfig {
-        applicationId "net.fabiszewski.ulogger"
+        applicationId 'net.fabiszewski.ulogger'
         minSdkVersion 14
         targetSdkVersion 28
-        versionCode 203
-        versionName "2.3"
+        versionCode 204
+        versionName '2.4'
     }
 
     buildTypes {
