--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,9 @@ android:
     - platform-tools
     - build-tools-29.0.0
     - android-29
+    - extra-android-support
     - extra-android-m2repository
-    - extra-google-android-support
+    - extra-google-m2repository
 script:
   - ./gradlew build
 after_success:
