--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 29
+    buildToolsVersion '29.0.0'
 
     defaultConfig {
         applicationId 'net.fabiszewski.ulogger'
