--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,9 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    testImplementation 'junit:junit:4.12'
     implementation 'androidx.appcompat:appcompat:1.1.0-beta01'
     implementation 'androidx.preference:preference:1.1.0-beta01'
+    implementation 'androidx.exifinterface:exifinterface:1.0.0'
+    testImplementation 'junit:junit:4.12'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 }
