--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-  ~ Copyright (c) 2017 Bartek Fabiszewski
-  ~ http://www.fabiszewski.net
-  ~
-  ~ This file is part of μlogger-android.
-  ~ Licensed under GPL, either version 3, or any later.
-  ~ See <http://www.gnu.org/licenses/>
-  -->
-
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="net.fabiszewski.ulogger">
@@ -15,35 +6,39 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!-- Write camera images -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <!-- For auto start -->
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <!-- For web sync retries -->
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <!-- For foreground services API >= 28 -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-
-    <!-- Needed if app targets API >= 21 -->
+    <!-- For location API >= 21 -->
     <uses-feature android:name="android.hardware.location.gps" />
     <uses-feature android:name="android.hardware.location.network" />
-
-    <!-- Todo: attach camera image to position -->
-    <!-- <uses-feature android:name="android.hardware.camera" android:required="false" /> -->
+    <!-- For attaching images to waypoints -->
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
 
     <application
         android:allowBackup="true"
         android:fullBackupContent="@xml/backup"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:networkSecurityConfig="@xml/network_security_config"
         tools:ignore="UnusedAttribute">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".WaypointActivity"
+            android:parentActivityName=".MainActivity" />
         <activity android:name=".SettingsActivity" />
 
         <service
@@ -54,10 +49,10 @@
         <service
             android:name=".WebSyncService"
             android:exported="false" />
-
         <service
             android:name=".GpxExportService"
             android:exported="false" />
+        <service android:name=".LoggerSingleService" />
 
         <receiver
             android:name=".RestartBroadcastReceiver"
@@ -67,6 +62,7 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.QUICKBOOT_POWERON" />
                 <action android:name="android.intent.action.MY_PACKAGE_REPLACED" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
