--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,10 @@ script:
 after_success:
   - |
     if [ ! -z "$TRANSIFEX_PASSWORD" ]; then
-      pip3 install --upgrade pip setuptools
-      pip3 install --user virtualenv
-      virtualenv ~/env -ppython3
+      pip install --user virtualenv
+      virtualenv ~/env
       source ~/env/bin/activate
-      pip3 install transifex-client
+      pip install transifex-client
       echo -e "[https://www.transifex.com]\nhostname = https://www.transifex.com\nusername = api\npassword = ${TRANSIFEX_PASSWORD}\n" > ~/.transifexrc
       tx push -s --no-interactive
     fi
@@ -46,3 +45,4 @@ addons:
     packages:
       - python3
       - python3-pip
+      - python-pip
