Use system transifex-client

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,6 @@ script:
 after_success:
   - |
     if [ ! -z "$TRANSIFEX_PASSWORD" ]; then
-      pip install --user virtualenv
-      virtualenv ~/env
-      source ~/env/bin/activate
-      pip install transifex-client
       echo -e "[https://www.transifex.com]\nhostname = https://www.transifex.com\nusername = api\npassword = ${TRANSIFEX_PASSWORD}\n" > ~/.transifexrc
       tx push -s --no-interactive
     fi
@@ -42,3 +38,6 @@ addons:
     build_command_prepend: rm -rf ./build
     build_command: ./gradlew -Dorg.gradle.jvmargs= --no-daemon assemble
     branch_pattern: master
+  apt:
+    packages:
+    - transifex-client
