--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,9 @@ script:
 after_success:
   - |
     if [ ! -z "$TRANSIFEX_PASSWORD" ]; then
-      echo -e "[https://www.transifex.com]\nhostname = https://www.transifex.com\nusername = api\npassword = ${TRANSIFEX_PASSWORD}\n" > ~/.transifexrc
-      tx push -s --no-interactive
+      tx --version
+      echo -e "[https://www.transifex.com]\napi_hostname = https://api.transifex.com\nhostname = https://www.transifex.com\nusername = api\npassword = ${TRANSIFEX_PASSWORD}\n" > ~/.transifexrc
+      tx --debug push -s --no-interactive
     fi
 after_failure:
   - cat app/build/reports/checkstyle.html
