--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ script:
 after_success:
   - |
     if [ ! -z "$TRANSIFEX_PASSWORD" ]; then
+      sudo apt-get update
+      sudo apt-get -y install transifex-client
       tx --version
       echo -e "[https://www.transifex.com]\napi_hostname = https://api.transifex.com\nhostname = https://www.transifex.com\nusername = api\npassword = ${TRANSIFEX_PASSWORD}\n" > ~/.transifexrc
       tx --debug push -s --no-interactive
@@ -39,6 +41,3 @@ addons:
     build_command_prepend: rm -rf ./build
     build_command: ./gradlew -Dorg.gradle.jvmargs= --no-daemon assemble
     branch_pattern: master
-  apt:
-    packages:
-    - transifex-client
