--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,13 +10,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 31
-    buildToolsVersion '31.0.0'
+    compileSdkVersion 32
+    buildToolsVersion '32.0.0'
 
     defaultConfig {
         applicationId 'net.fabiszewski.ulogger'
-        minSdkVersion 19
-        targetSdkVersion 31
+        minSdkVersion 21
+        targetSdkVersion 32
         versionCode 306
         versionName '3.6'
     }
@@ -32,21 +32,19 @@ android {
         }
     }
 
-    lintOptions {
-        disable 'GoogleAppIndexingWarning'
-        disable 'MissingTranslation'
-        disable 'NotificationIconCompatibility'
-    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+    lint {
+        disable 'GoogleAppIndexingWarning', 'MissingTranslation', 'NotificationIconCompatibility'
     }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'androidx.appcompat:appcompat:1.4.0'
-    implementation 'androidx.preference:preference:1.1.1'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.preference:preference:1.2.0'
     implementation 'androidx.exifinterface:exifinterface:1.3.3'
     testImplementation 'junit:junit:4.13.2'
 }
