GHA: show reports on failure

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,14 +18,9 @@ jobs:
           java-version: '11'
       - name: build
         run: ./gradlew build
-      - name: show logs on failure
+      - name: show reports on failure
         if: ${{ failure() }}
-        run: |
-          cat app/build/reports/checkstyle.html
-          cat app/build/reports/lint-results.xml
-          cat app/build/reports/lint-results.html
-          cat app/build/reports/findbugs.html
-          cat app/build/reports/pmd.html
+        run: cat app/build/reports/*
 
   upload-to-transifex:
     runs-on: ubuntu-latest
