--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017 Bartek Fabiszewski
+ * Copyright (c) 2022 Bartek Fabiszewski
  * http://www.fabiszewski.net
  *
  * This file is part of μlogger-android.
@@ -10,13 +10,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 32
-    buildToolsVersion '32.0.0'
+    compileSdkVersion 33
+    buildToolsVersion '33.0.0'
 
     defaultConfig {
         applicationId 'net.fabiszewski.ulogger'
         minSdkVersion 21
-        targetSdkVersion 32
+        targetSdkVersion 33
         versionCode 307
         versionName '3.7'
     }
@@ -39,12 +39,17 @@ android {
     lint {
         disable 'GoogleAppIndexingWarning', 'MissingTranslation', 'NotificationIconCompatibility'
     }
+    namespace 'net.fabiszewski.ulogger'
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'androidx.preference:preference:1.2.0'
-    implementation 'androidx.exifinterface:exifinterface:1.3.3'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation('androidx.preference:preference:1.2.0') {
+        // workaround for appcompat:1.5.1
+        exclude group: 'androidx.lifecycle', module:'lifecycle-viewmodel'
+        exclude group: 'androidx.lifecycle', module:'lifecycle-viewmodel-ktx'
+    }
+    implementation 'androidx.exifinterface:exifinterface:1.3.4'
     testImplementation 'junit:junit:4.13.2'
 }
