--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,18 +31,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v3   
       
-      - name: push to transifex
-        env:
-          TRANSIFEX_PASSWORD: ${{ secrets.TX_TOKEN }}
-        run: |
-            if [ ! -z "$TRANSIFEX_PASSWORD" ]; then
-              pip install --user virtualenv
-              virtualenv ~/env
-              source ~/env/bin/activate
-              pip install transifex-client
-              echo -e "[https://www.transifex.com]\nhostname = https://www.transifex.com\nusername = api\npassword = ${TRANSIFEX_PASSWORD}\n" > ~/.transifexrc
-              tx push -s --no-interactive
-            fi
+      - name: push sources to transifex
+        uses: transifex/cli-action@v2
+        with:
+          token: ${{ secrets.TX_TOKEN }}
 
   upload-to-coverity:
     runs-on: ubuntu-latest
