--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,13 +10,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 33
-    buildToolsVersion '33.0.0'
+    compileSdk 34
 
     defaultConfig {
         applicationId 'net.fabiszewski.ulogger'
         minSdkVersion 21
-        targetSdkVersion 33
+        targetSdkVersion 34
         versionCode 309
         versionName '3.9'
     }
@@ -45,7 +44,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'androidx.preference:preference:1.2.0'
+    implementation 'androidx.preference:preference:1.2.1'
     implementation 'androidx.exifinterface:exifinterface:1.3.6'
     testImplementation 'junit:junit:4.13.2'
 }
