--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,8 +31,9 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION"/>
 
     <!-- For location API >= 21 -->
+    <uses-feature android:name="android.hardware.location" />
     <uses-feature android:name="android.hardware.location.gps" android:required="false" />
-    <uses-feature android:name="android.hardware.location.network" />
+    <uses-feature android:name="android.hardware.location.network" android:required="false" />
     <!-- For attaching images to waypoints -->
     <uses-feature android:name="android.hardware.camera" android:required="false" />
 
