--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,12 +39,15 @@ android {
         disable 'GoogleAppIndexingWarning', 'MissingTranslation', 'NotificationIconCompatibility'
     }
     namespace 'net.fabiszewski.ulogger'
+    buildFeatures {
+        buildConfig true
+    }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.preference:preference:1.2.1'
-    implementation 'androidx.exifinterface:exifinterface:1.3.6'
+    implementation 'androidx.exifinterface:exifinterface:1.3.7'
     testImplementation 'junit:junit:4.13.2'
 }
