--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,12 +10,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         applicationId 'net.fabiszewski.ulogger'
         minSdkVersion 21
-        targetSdkVersion 34
+        targetSdkVersion 35
         versionCode 311
         versionName '3.11'
     }
@@ -44,10 +44,21 @@ android {
     }
 }
 
+configurations.configureEach {
+    resolutionStrategy {
+        eachDependency {
+            // fix duplicate class in kotlin-stdlib dependencies
+            if ((requested.group == "org.jetbrains.kotlin") && (requested.name.startsWith("kotlin-stdlib"))) {
+                useVersion("1.8.0")
+            }
+        }
+    }
+}
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'androidx.preference:preference:1.2.1'
-    implementation 'androidx.exifinterface:exifinterface:1.3.7'
+    implementation 'androidx.exifinterface:exifinterface:1.4.0'
     testImplementation 'junit:junit:4.13.2'
 }
