Add per-app language preference

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,9 @@ android {
     buildFeatures {
         buildConfig true
     }
+    androidResources {
+        generateLocaleConfig true
+    }
 }
 
 configurations.configureEach {
