--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
         targetSdkVersion 35
         versionCode 311
         versionName '3.11'
-        resConfigs "en", "ca", "cs", "de", "el", "es", "eu", "fi", "fr", "gl", "it", "ja", "pl", "pt-rBR", "ru", "sk", "zh-rCN"
+        resourceConfigurations += ['en', 'ca', 'cs', 'de', 'el', 'es', 'eu', 'fi', 'fr', 'gl', 'it', 'ja', 'pl', 'pt-rBR', 'ru', 'sk', 'zh-rCN']
     }
 
     buildTypes {
